--- a/V3.ipynb
+++ b/V3.ipynb
@@ -21,14 +21,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "AAc_-AeGEE5H",
-        "outputId": "fa321879-e0ab-4d26-f3f7-628de243c713"
+        "outputId": "e3ae59ba-dc5c-446f-c22c-c48d8ef5163d"
       },
       "outputs": [
         {
@@ -36,7 +36,8 @@
           "name": "stdout",
           "text": [
             "Requirement already satisfied: pygame in /usr/local/lib/python3.11/dist-packages (2.6.1)\n",
-            "Requirement already satisfied: highway-env in /usr/local/lib/python3.11/dist-packages (1.10.1)\n",
+            "Collecting highway-env\n",
+            "  Downloading highway_env-1.10.1-py3-none-any.whl.metadata (16 kB)\n",
             "Requirement already satisfied: gymnasium>=1.0.0a2 in /usr/local/lib/python3.11/dist-packages (from highway-env) (1.1.1)\n",
             "Requirement already satisfied: farama-notifications>=0.0.1 in /usr/local/lib/python3.11/dist-packages (from highway-env) (0.0.4)\n",
             "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.0.2)\n",
@@ -56,7 +57,11 @@
             "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (2.9.0.post0)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.17.0)\n"
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.17.0)\n",
+            "Downloading highway_env-1.10.1-py3-none-any.whl (104 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m105.0/105.0 kB\u001b[0m \u001b[31m10.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: highway-env\n",
+            "Successfully installed highway-env-1.10.1\n"
           ]
         }
       ],
@@ -76,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 2,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -122,24 +127,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "y922XK-cIewr",
-        "outputId": "0ebe4c6b-b1a3-41f1-9a74-7b26b761c33c"
+        "outputId": "5820a05a-860a-4c71-b022-a75842ab31cb"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<highway_env.envs.common.action.ContinuousAction at 0x7eaa69fd35d0>"
+              "<highway_env.envs.common.action.ContinuousAction at 0x783acd79d090>"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 3
         }
       ],
       "source": [
@@ -173,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 4,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -396,7 +401,7 @@
       "metadata": {
         "id": "MW5pZ2IxtbyI"
       },
-      "execution_count": 15,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -410,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 6,
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
@@ -529,7 +534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 7,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -569,13 +574,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 8,
       "metadata": {
         "id": "RYA-H09sIw2_",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a16a9e0c-a7b8-40b3-a76c-0908caa79a47"
+        "outputId": "b5d18330-a22e-4f94-9090-852a3c7c6bb2"
       },
       "outputs": [
         {
@@ -691,7 +696,7 @@
       "metadata": {
         "id": "jbBscUzUlq5w"
       },
-      "execution_count": 19,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -706,18 +711,19 @@
     {
       "cell_type": "code",
       "source": [
+        "rollout_size = 5\n",
+        "\n",
         "# Training loop\n",
         "for batch in tqdm.tqdm(range(nb_batches)):\n",
         "\n",
         "    # PPO Initialization\n",
-        "    advantages = torch.zeros(max_timesteps_per_rollout, dtype=torch.float32, device=device)\n",
-        "    buffer_states = torch.zeros((max_timesteps_per_rollout, state_dim), dtype=torch.float32, device=device)\n",
-        "    buffer_actions = torch.zeros((max_timesteps_per_rollout, action_dim), dtype=torch.float32, device=device)\n",
-        "    buffer_log_probs = torch.zeros((max_timesteps_per_rollout), dtype=torch.float32, device=device)\n",
-        "    buffer_state_values = torch.zeros((max_timesteps_per_rollout+1), dtype=torch.float32, device=device)\n",
-        "    buffer_rewards = torch.zeros((max_timesteps_per_rollout), dtype=torch.float32, device=device)\n",
-        "    buffer_is_terminal = torch.zeros((max_timesteps_per_rollout), dtype=torch.float32, device=device)\n",
-        "\n",
+        "    advantages = torch.zeros(max_timesteps_per_rollout*rollout_size, dtype=torch.float32, device=device)\n",
+        "    buffer_states = torch.zeros((max_timesteps_per_rollout*rollout_size, state_dim), dtype=torch.float32, device=device)\n",
+        "    buffer_actions = torch.zeros((max_timesteps_per_rollout*rollout_size, action_dim), dtype=torch.float32, device=device)\n",
+        "    buffer_log_probs = torch.zeros((max_timesteps_per_rollout*rollout_size), dtype=torch.float32, device=device)\n",
+        "    buffer_state_values = torch.zeros((max_timesteps_per_rollout*rollout_size+1), dtype=torch.float32, device=device)\n",
+        "    buffer_rewards = torch.zeros((max_timesteps_per_rollout*rollout_size), dtype=torch.float32, device=device)\n",
+        "    buffer_is_terminal = torch.zeros((max_timesteps_per_rollout*rollout_size), dtype=torch.float32, device=device)\n",
         "\n",
         "    # Env Initialization\n",
         "    obs, _ = env.reset()\n",
@@ -735,8 +741,9 @@
         "    episode_step = 0\n",
         "    episode_return = 0.0\n",
         "    t = 0\n",
+        "    rollout = 0\n",
         "\n",
-        "    while not done:\n",
+        "    while not done and rollout < rollout_size:\n",
         "      gap_control = Gap_Controller(obs, following_gap_threshold=30)\n",
         "      activated_target_lane = gap_control.lane_checker()\n",
         "\n",
@@ -770,9 +777,6 @@
         "      reward_components = state_manager.reward_function(obs_old, obs, target_id)\n",
         "      reward = reward_components[0]\n",
         "\n",
-        "      # Update episode return\n",
-        "      episode_return += reward\n",
-        "\n",
         "      # Store trajectory information\n",
         "      buffer_states[t] = state_tensor.squeeze(0)\n",
         "      buffer_actions[t] = agent_action\n",
@@ -784,12 +788,17 @@
         "      t += 1  # Increment timestep counter\n",
         "      obs_old = obs\n",
         "\n",
-        "      # If episode is done, track results and increment episode counter\n",
+        "      # If episode is done, increment rollout and reset for next episode\n",
         "      if done:\n",
-        "          total_env_episodes += 1\n",
+        "          rollout += 1\n",
+        "          if rollout < rollout_size:\n",
+        "              obs, _ = env.reset()\n",
+        "              state_manager.update(obs)\n",
+        "              done = False\n",
+        "              obs_old = obs\n",
         "\n",
         "    # Print rollout info\n",
-        "    print(f\"Training Batch {batch}: Collected {t} timesteps, {total_env_episodes} episodes\")\n",
+        "    print(f\"Training Batch {batch}: Collected {t} timesteps Episode Count: {rollout}\")\n",
         "\n",
         "    # Calculate advantages using GAE\n",
         "    gae = 0\n",
@@ -809,10 +818,6 @@
         "        delta = buffer_rewards[t_idx] + gamma * next_value * (1-terminal) - buffer_state_values[t_idx]\n",
         "        gae = delta + (gamma * gae_lambda) * gae * (1-terminal)\n",
         "        advantages[t_idx] = gae\n",
-        "\n",
-        "    # Normalize advantages\n",
-        "    if t > 1:\n",
-        "        advantages = (advantages - advantages.mean()) / (advantages.std() + 1e-8)\n",
         "\n",
         "    # Prepare data for policy update\n",
         "    advantages_data_loader = DataLoader(\n",
@@ -922,7 +927,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gMY396Rx5F1J",
-        "outputId": "bb69c97e-812b-4244-99e3-2ec5803133a8"
+        "outputId": "a9a17eb9-29e1-42aa-f196-321da5c470d7"
       },
       "execution_count": null,
       "outputs": [
@@ -930,71 +935,14 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "  0%|          | 1/1000 [00:01<19:19,  1.16s/it]"
+            "  0%|          | 1/1000 [00:01<32:44,  1.97s/it]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training Batch 0: Collected 23 timesteps, 33 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  0%|          | 2/1000 [00:01<11:53,  1.40it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 1: Collected 8 timesteps, 34 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  0%|          | 3/1000 [00:02<10:49,  1.54it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 2: Collected 13 timesteps, 35 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  0%|          | 4/1000 [00:02<08:45,  1.90it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 3: Collected 7 timesteps, 36 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  0%|          | 5/1000 [00:02<07:30,  2.21it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 4: Collected 5 timesteps, 37 episodes\n",
-            "Training Batch 5: Collected 5 timesteps, 38 episodes\n"
+            "Training Batch 0: Collected 58 timesteps Episode Count: 5\n"
           ]
         }
       ]
