--- a/V3.ipynb
+++ b/V3.ipynb
@@ -28,7 +28,7 @@
         },
         "collapsed": true,
         "id": "AAc_-AeGEE5H",
-        "outputId": "e3ae59ba-dc5c-446f-c22c-c48d8ef5163d"
+        "outputId": "febbe800-81d1-426e-cc7c-b1cde525ff85"
       },
       "outputs": [
         {
@@ -36,8 +36,7 @@
           "name": "stdout",
           "text": [
             "Requirement already satisfied: pygame in /usr/local/lib/python3.11/dist-packages (2.6.1)\n",
-            "Collecting highway-env\n",
-            "  Downloading highway_env-1.10.1-py3-none-any.whl.metadata (16 kB)\n",
+            "Requirement already satisfied: highway-env in /usr/local/lib/python3.11/dist-packages (1.10.1)\n",
             "Requirement already satisfied: gymnasium>=1.0.0a2 in /usr/local/lib/python3.11/dist-packages (from highway-env) (1.1.1)\n",
             "Requirement already satisfied: farama-notifications>=0.0.1 in /usr/local/lib/python3.11/dist-packages (from highway-env) (0.0.4)\n",
             "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.0.2)\n",
@@ -57,11 +56,7 @@
             "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (2.9.0.post0)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.17.0)\n",
-            "Downloading highway_env-1.10.1-py3-none-any.whl (104 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m105.0/105.0 kB\u001b[0m \u001b[31m10.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: highway-env\n",
-            "Successfully installed highway-env-1.10.1\n"
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.17.0)\n"
           ]
         }
       ],
@@ -133,14 +128,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y922XK-cIewr",
-        "outputId": "5820a05a-860a-4c71-b022-a75842ab31cb"
+        "outputId": "2602f7fa-9dd7-44a7-f2c2-620e0ec36adb"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<highway_env.envs.common.action.ContinuousAction at 0x783acd79d090>"
+              "<highway_env.envs.common.action.ContinuousAction at 0x7cee4479fad0>"
             ]
           },
           "metadata": {},
@@ -580,7 +575,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b5d18330-a22e-4f94-9090-852a3c7c6bb2"
+        "outputId": "3dad9d24-7e50-48be-dc87-d718d9eaeac0"
       },
       "outputs": [
         {
@@ -661,7 +656,7 @@
         "test_rate = 5  # Test every 5 batches\n",
         "num_test = 0\n",
         "\n",
-        "batch_size = 64\n",
+        "batch_size = 128\n",
         "gamma = 0.99\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "vf_coeff_cl = 0.5\n",
@@ -798,7 +793,7 @@
         "              obs_old = obs\n",
         "\n",
         "    # Print rollout info\n",
-        "    print(f\"Training Batch {batch}: Collected {t} timesteps Episode Count: {rollout}\")\n",
+        "    print(f\"Training Batch {batch+1}: Collected {t} timesteps Episode Count: {rollout}\")\n",
         "\n",
         "    # Calculate advantages using GAE\n",
         "    gae = 0\n",
@@ -811,7 +806,7 @@
         "        else:\n",
         "            terminal = 0\n",
         "            if t_idx == t-1:\n",
-        "                next_value = buffer_state_values[t]\n",
+        "                next_value = 0\n",
         "            else:\n",
         "                next_value = buffer_state_values[t_idx+1]\n",
         "\n",
@@ -896,6 +891,7 @@
         "\n",
         "                episode_reward += reward\n",
         "                test_steps += 1\n",
+        "                obs_old = obs\n",
         "\n",
         "            test_rewards.append(episode_reward)\n",
         "\n",
@@ -911,7 +907,7 @@
         "        print(f\"Episode {batch}: Avg Test Reward = {avg_test_reward:.2f}, Max Test Reward = {current_max:.2f}\")\n",
         "\n",
         "    # Plot every 50 btaches\n",
-        "    if num_test % test_rate*10 == 0 and batch > 0 and batch_average_reward_history:\n",
+        "    if batch % 10 == 0 and batch > 0 and batch_average_reward_history:\n",
         "        plt.figure(figsize=(10, 6))\n",
         "        plt.plot(batch_episode_history, batch_average_reward_history, 'r-o', linewidth=2)\n",
         "        plt.title(f\"Test Performance (Batch {batch}, Max: {max_reward:.1f})\")\n",
@@ -927,7 +923,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gMY396Rx5F1J",
-        "outputId": "a9a17eb9-29e1-42aa-f196-321da5c470d7"
+        "outputId": "7d4cbd28-0ffc-4c3e-9aa7-a59eff87ccf2"
       },
       "execution_count": null,
       "outputs": [
@@ -935,14 +931,71 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "  0%|          | 1/1000 [00:01<32:44,  1.97s/it]"
+            "  0%|          | 1/1000 [00:02<33:28,  2.01s/it]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training Batch 0: Collected 58 timesteps Episode Count: 5\n"
+            "Training Batch 0: Collected 32 timesteps Episode Count: 5\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  0%|          | 2/1000 [00:04<35:24,  2.13s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 1: Collected 58 timesteps Episode Count: 5\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  0%|          | 3/1000 [00:05<30:52,  1.86s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 2: Collected 43 timesteps Episode Count: 5\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  0%|          | 4/1000 [00:07<27:59,  1.69s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 3: Collected 41 timesteps Episode Count: 5\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  0%|          | 5/1000 [00:08<27:33,  1.66s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 4: Collected 46 timesteps Episode Count: 5\n",
+            "Training Batch 5: Collected 32 timesteps Episode Count: 5\n"
           ]
         }
       ]
