--- a/V3.ipynb
+++ b/V3.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -128,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -179,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -433,7 +433,7 @@
       "metadata": {
         "id": "MW5pZ2IxtbyI"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -447,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
@@ -467,13 +467,15 @@
         "        \"\"\"\n",
         "        Determines which adjacent lane offers the safest gap for a lane change.\n",
         "        It examines the current lane, the lane to the left, and the lane to the right,\n",
-        "        returning the lane index that has the largest safe front gap available.\n",
+        "        returning a direction indicator for the lane change action.\n",
         "        In addition, if the gap with the following vehicle in the target lane is below the safety\n",
         "        threshold, the lane change is aborted and the current lane is chosen.\n",
         "\n",
         "        Returns:\n",
-        "            int: The target lane index (the lane with the largest safe gap, or the current lane)\n",
-        "                 if the candidate lane's following vehicle gap is unsafe.\n",
+        "            int: Direction indicator for lane change:\n",
+        "                 +1 for right lane change\n",
+        "                 -1 for left lane change\n",
+        "                  0 for staying in current lane\n",
         "        \"\"\"\n",
         "        lane_number = len(env.unwrapped.road.network.lanes_list())\n",
         "        ego = env.unwrapped.vehicle\n",
@@ -529,30 +531,31 @@
         "        front_gaps = [gap_current_front, gap_right_front, gap_left_front]\n",
         "        best_index = np.argmax(front_gaps)\n",
         "\n",
-        "        # Determine the target lane index based on the best candidate.\n",
+        "        # Determine the target lane direction based on the best candidate.\n",
         "        # best_index: 0 => current lane, 1 => right lane, 2 => left lane.\n",
         "        if best_index == 1:\n",
         "            candidate_lane = lane_right\n",
         "            candidate_follower_gap = gap_right_follower\n",
+        "            direction = 1  # Right turn\n",
         "        elif best_index == 2:\n",
         "            candidate_lane = lane_left\n",
         "            candidate_follower_gap = gap_left_follower\n",
+        "            direction = -1  # Left turn\n",
         "        else:\n",
         "            candidate_lane = ego.lane_index\n",
-        "            candidate_follower_gap = gap_current_follower  # in current lane, we don't enforce follower gap condition\n",
+        "            candidate_follower_gap = gap_current_follower\n",
+        "            direction = 0  # Stay in current lane\n",
         "\n",
         "        # Check if the candidate lane (if different from the current lane)\n",
         "        # meets the follower gap condition.\n",
         "        if candidate_lane != ego.lane_index:\n",
         "            if candidate_follower_gap < self.following_gap_threshold:\n",
         "                # The follower gap is too small; do not change lanes.\n",
-        "                target_lane_id = ego.lane_index[2]\n",
+        "                return 0  # Stay in current lane\n",
         "            else:\n",
-        "                target_lane_id = candidate_lane[2]\n",
+        "                return direction  # Return the direction for lane change\n",
         "        else:\n",
-        "            target_lane_id = ego.lane_index[2]\n",
-        "\n",
-        "        return target_lane_id\n"
+        "            return 0  # Stay in current lane"
       ]
     },
     {
@@ -566,7 +569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -597,7 +600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "RYA-H09sIw2_",
         "colab": {
@@ -694,7 +697,7 @@
         "id": "dI7oYjvr8r42",
         "outputId": "4ec32f12-6277-4b29-8ff8-2a9e54f9f3a2"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -773,7 +776,7 @@
       "metadata": {
         "id": "jbBscUzUlq5w"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1034,7 +1037,7 @@
         "id": "gMY396Rx5F1J",
         "outputId": "5cbdd267-3620-4fd9-e2b3-a9db40885364"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
